# runforlife

./: .env.example  .gitignore  PRIVACY.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/: ARCHITECTURE.md  CONCEPTS.md  PROJECT.md  SKILLS.md
runforlife-coach/: ROADMAP.md  conflict-rules.md
runforlife-coach/.claude-plugin/: plugin.json
runforlife-coach/agents/: analytics-specialist.md  conflict-resolver.md  exercise-science-translator.md  kenyan-camp-coach.md  parallel-fetch.md  physio-specialist.md  race-specialist.md  recovery-specialist.md  strength-specialist.md  training-specialist.md
runforlife-coach/commands/: chart.md  compare.md  daily-plan.md  goal-status.md  note.md  panel.md  personality.md  pulse.md  reflect.md  status.md  switch.md  weekly-plan.md
runforlife-coach/hooks/: hooks.json  post_tool_use.py  pre_tool_use.py  session_start.py  stop.py
runforlife-coach/scripts/: athlete_init.py  feedback_stats.py  memory_manager.py  migrate_data.py
src/runforlife/: __init__.py  auth.py  config.py  main.py  server.py
tests/: test_activity_sessions.py  test_athlete_gate.py  test_athlete_init.py  test_athlete_roster.py  test_atomic_write_json.py  test_collector_provenance.py  test_correlate_metrics_run.py  test_daily_load.py  test_features.py  test_feedback_capture.py  test_feedback_stats_rates.py  test_memory_manager_add.py  test_pre_tool_use_guard.py  test_readiness_signals.py  test_recovery_anomalies.py  test_run_laps.py  test_run_sql_guard.py  test_session_start_hook.py  test_sparkline.py  test_sync_foundation.py  test_z2_pace_trend.py
(+67 files in other folders)
