[project]
name = "runforlife"
version = "0.1.0"
description = "AI agent-powered running coach for Hyrox training"
readme = "README.md"
authors = [
    { name = "Tezuesh Varshney", email = "tezuesh.varshney@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.0",
    "garminconnect>=0.3.3",
    "curl_cffi>=0.7",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "numpy>=2.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "ipython",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
